--- a/src/Components/Chart/chart.scss
+++ b/src/Components/Chart/chart.scss
@@ -2,3 +2,15 @@
   max-width: 100%;
   max-height: 100%;
 }
+.overall_linestylechart {
+  // canvas {
+  //   box-sizing: border-box;
+  //   display: block;
+  //   height: 232px !important;
+  //   width: 724px;
+  // }
+  canvas {
+   
+    width: 100% !important;
+  }
+}
